<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    android:padding="16dp"
    tools:context=".ui.DetailFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/detail_task_title_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/detail_task_title_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="100"
            tools:text="Classification" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/detail_task_description_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/task_description"
        app:layout_constraintTop_toBottomOf="@id/detail_task_title_inputlayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/detail_task_description_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:maxLength="300"
            tools:text="Enter Description Here..." />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/detail_task_deadline_inputlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        android:hint="@string/Time"
        app:layout_constraintEnd_toStartOf="@id/detail_task_deadline_am_pm_spinner_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_task_description_inputlayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/detail_task_deadline_edittext"
            android:layout_width="match_parent"
            android:inputType="time"
            android:maxLength="5"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/detail_task_deadline_am_pm_spinner_container"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="6dp"
        android:background="@color/black"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detail_task_deadline_inputlayout"
        app:strokeColor="?attr/colorOutline">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/detail_task_deadline_am_pm_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detail_task_cancel_btn"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/detail_task_add_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_task_deadline_inputlayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detail_task_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/add"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/detail_task_cancel_btn"
        app:layout_constraintTop_toTopOf="@id/detail_task_cancel_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>
